--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
 	"name": "wsydney76/elementmap",
-	"description": "Simple visualization panel that lists related elements in their associated editors.",
+	"description": "Lists related elements.",
 	"type": "craft-plugin",
-	"version": "1.4.0",
+	"version": "2.0.0",
 	"license": "MIT",
   "authors": [
     {
@@ -11,7 +11,7 @@
     }
   ],
 	"require": {
-		"craftcms/cms": "^3.0.0-RC1"
+		"craftcms/cms": "^3.7.0"
 	},
 	"autoload": {
 		"psr-4": {
